# ChangeLog for net-im/telepathy-mission-control
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/telepathy-mission-control/ChangeLog,v 1.17 2008/03/12 13:20:35 coldwind Exp $

*telepathy-mission-control-4.64 (12 Mar 2008)

  12 Mar 2008; Santiago M. Mola <coldwind@gentoo.org>
  -telepathy-mission-control-4.63.ebuild,
  +telepathy-mission-control-4.64.ebuild:
  Version bump and remove buggy version.

*telepathy-mission-control-4.63 (10 Mar 2008)

  10 Mar 2008; Santiago M. Mola <coldwind@gentoo.org>
  +telepathy-mission-control-4.63.ebuild:
  Version bump.

  08 Mar 2008; Santiago M. Mola <coldwind@gentoo.org>
  telepathy-mission-control-4.61.ebuild:
  Depend on >=libtelepathy-0.3.2.

*telepathy-mission-control-4.61 (06 Mar 2008)

  06 Mar 2008; Santiago M. Mola <coldwind@gentoo.org>
  +telepathy-mission-control-4.61.ebuild:
  Version bump.

*telepathy-mission-control-4.60 (19 Feb 2008)

  19 Feb 2008; Santiago M. Mola <coldwind@gentoo.org>
  +telepathy-mission-control-4.60.ebuild:
  Version bump.

*telepathy-mission-control-4.57 (24 Jan 2008)

  24 Jan 2008; Santiago M. Mola <coldwind@gentoo.org>
  -files/telepathy-mission-control-4.51-fix-segfault.patch,
  -telepathy-mission-control-4.51-r1.ebuild,
  +telepathy-mission-control-4.57.ebuild:
  Version bump and remove old.

*telepathy-mission-control-4.55 (16 Jan 2008)

  16 Jan 2008; Santiago M. Mola <coldwind@gentoo.org>
  -telepathy-mission-control-4.42.ebuild,
  -telepathy-mission-control-4.49.ebuild,
  -telepathy-mission-control-4.51.ebuild,
  +telepathy-mission-control-4.55.ebuild:
  Version bump and remove old.

*telepathy-mission-control-4.51-r1 (29 Dec 2007)

  29 Dec 2007; Santiago M. Mola <coldwind@gentoo.org>
  +files/telepathy-mission-control-4.51-fix-segfault.patch,
  +telepathy-mission-control-4.51-r1.ebuild:
  Fix a segfault which affected Empathy.

*telepathy-mission-control-4.51 (18 Dec 2007)
