@@ -3,10 +3,12 @@ DIST telepathy-mission-control-4.57.tar.gz 586552 RMD160 89daef3c551fc343ca3d4dd
 DIST telepathy-mission-control-4.60.tar.gz 588124 RMD160 31061e5418fc076aeb642697353453d3af5b62e5 SHA1 11fd7a01555eb08ff546cacb6f987c8fa82abeb7 SHA256 d00da25730a6482c51ecd62f2dba494f25023e4edcd9e475f9c5aadef44c98b8
 DIST telepathy-mission-control-4.61.tar.gz 631244 RMD160 ac82ccaa1b305a0fb0392769176387ea2b00bd40 SHA1 59bb9198807b0caa98e2e7ced7cb1bf2819aa0f3 SHA256 76009d233a69b2d12c2aff94770dfe9fc0558e07071f941b738bab357f8fb7b9
 DIST telepathy-mission-control-4.64.tar.gz 651120 RMD160 f2e587e9eff42b498a08b6ce545e3afd0076e506 SHA1 b90b601436c822cc58c8e2497d59af10de77a549 SHA256 4d3f23af9c1229894d51daf9b700deae641f783f43c93ee5efa312678662685f
+DIST telepathy-mission-control-4.65.tar.gz 651765 RMD160 c1a0999f6ea0dcff824b9e430f6b4bd1b87febde SHA1 de1f6cb566b8d5fe9fd0734ce6d770b832a1594d SHA256 e3ba39e9730252cec875782956852d4d73a91a4bd21548efafc8a5e4ee0e9221
 EBUILD telepathy-mission-control-4.55.ebuild 953 RMD160 682bb6f0b0ceb3895777817f5851d6219df35feb SHA1 12e8366a0e389901f1519bb08ef18f7b55b5966c SHA256 2cdfaf8a3df0eb5a5d4d22a45ff70dfc6f8d70d70559177634855157483a1c30
 EBUILD telepathy-mission-control-4.57.ebuild 953 RMD160 4b44053502fdb00ec2164d5f6167919803c6fb4f SHA1 265e4fbd4a4d3fc10cea03182091b96c139ef1e6 SHA256 7826a4684d8bb2ba759839f41d6b97885e8dc7a8441982a0c7220fbd30bfdec2
 EBUILD telepathy-mission-control-4.60.ebuild 953 RMD160 c592317125efa677be3a8a3865a316d4e81f9067 SHA1 80417ae4bc91148a70321ab65be6e9a612383384 SHA256 06baff973bdc60ce3be62e4f5da6cb464732f9521bd94ba866e47cc1b3cea836
 EBUILD telepathy-mission-control-4.61.ebuild 994 RMD160 11d4edcd2c7e47f22dabd2f421b51c6eaffa6185 SHA1 2d1c6a762d7a2d7cb3e7ee7bc86d15b72836cdea SHA256 5dddcf54158b434c8fb39245cc1f5a514cbdf831a63877f0d610f5d3edef15a3
 EBUILD telepathy-mission-control-4.64.ebuild 994 RMD160 dab29c8a91c113b058d9569ed5fa9b4089866983 SHA1 202a56c0fb308e4855215c9910067c728a20cab5 SHA256 819cbba6b3d261c27f6f70af1932843fff09ca87ab9be26fb219c61f490fc22a
-MISC ChangeLog 3580 RMD160 2f71d8ef7d9a9ae67ecf159995df74df243d596c SHA1 ed6b65db61bff1901b8c146fd88987051a24c6cf SHA256 ce8458de862ef6ce17c2f97374cef416ed60b7b50c3d3914898205803805bbcb
+EBUILD telepathy-mission-control-4.65.ebuild 1074 RMD160 d5f9f2a57e69b79a22f3de514f493c1c74eb451a SHA1 0e6df55d38964656f85cf3cbe39bd583f37147ad SHA256 1e9441bc03c37b6437d5bc3c442c0a86d33bd56d4d4aae80f370e1f29d40bdca
+MISC ChangeLog 3767 RMD160 7831f524c14e13d2d3ccda6c554c2592c03466d1 SHA1 63935c29a1aed45076fb07f17e9f386e3ec4d86a SHA256 5511b7497d27a39dafff3d5c83389ab2b7fe7b4112716d85d4835ce58910408e
 MISC metadata.xml 615 RMD160 ccb0eda186e9473c348e0342c86d81a865724bbc SHA1 cfe761e7b665f9bffa79cdc3f03aecb32a4a6e17 SHA256 6deb597b809324c5e44000dd3e4397441c7786a4537790904029d3350bab60fc
