@@ -1,6 +1,12 @@
 # ChangeLog for net-im/telepathy-mission-control
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/telepathy-mission-control/ChangeLog,v 1.17 2008/03/12 13:20:35 coldwind Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/telepathy-mission-control/ChangeLog,v 1.18 2008/04/10 11:04:18 coldwind Exp $
+
+*telepathy-mission-control-4.65 (10 Apr 2008)
+
+  10 Apr 2008; Santiago M. Mola <coldwind@gentoo.org>
+  +telepathy-mission-control-4.65.ebuild:
+  Version bump, featuring keyring support.
 
 *telepathy-mission-control-4.64 (12 Mar 2008)
 
